added navbar links animation

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       <div class="section__text">I'm excited to keep learning and refining my skills with the right company.
         Feel free to reach out and say hello!</div>
-      <div class="button-container"><a class="button button--about" href="">Get in touch</a></div>
+      <div class="button-container"><a class="button button--about" href="#contact">Get in touch</a></div>
     </div>
     <div class="custom-shape-divider-bottom-1655993251">
       <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -321,8 +321,8 @@
   <footer class="footer">
     <div class="socials">
       <p class="footer__text">Find me elsewhere on the web:</p>
-      <a class="socials__link" href=""><i class="devicon-github-original"></i></a>
-      <a class="socials__link" href=""><i class="devicon-twitter-original"></i></a>
+      <a class="socials__link" href="https://github.com/GlodallaLuna"><i class="devicon-github-original"></i></a>
+      <a class="socials__link" href="https://twitter.com/GlodallaLuna?t=89U-6GyNaA88pEt9zawbsA&s=35"><i class="devicon-twitter-original"></i></a>
       <a class="socials__link" href=""><i class="devicon-linkedin-plain"></i></a>
     </div>
 
