fixed scale issue on buttons hover

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
       <div class="section__text">I'm excited to keep learning and refining my skills with the right company.
         Feel free to reach out and say hello!</div>
-      <div class="button-container"><a class="button button--about" href="#contact">Get in touch</a></div>
+      <div class="button-container"><button class="button button--about" href="#contact">Get in touch</button></div>
     </div>
     <div class="custom-shape-divider-bottom-1655993251">
       <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -204,8 +204,8 @@
         </div>
 
         <div class="buttons-container flex">
-          <div><a class="button--projects" href="#">GitHub</a></div>
-          <div><a class="button--projects" href="https://trivia-quiz-game-7f6ef.web.app" target="_blank">Live site</a>
+          <div><button class="button--projects" href="#">GitHub</button></div>
+          <div><button class="button--projects" href="https://trivia-quiz-game-7f6ef.web.app" target="_blank">Live site</button>
           </div>
         </div>
 
@@ -237,8 +237,8 @@
         </div>
 
         <div class="buttons-container buttons-container--modified flex">
-          <div><a class="button--projects" href="#">GitHub</a></div>
-          <div><a class="button--projects" href="https://hiragana-flashcard-app.web.app" target="_blank">Live site</a>
+          <div><button class="button--projects" href="#">GitHub</button></div>
+          <div><button class="button--projects" href="https://hiragana-flashcard-app.web.app" target="_blank">Live site</button>
           </div>
         </div>
 
@@ -269,8 +269,8 @@
         </div>
 
         <div class="buttons-container flex">
-          <div><a class="button--projects" href="#">GitHub</a></div>
-          <div><a class="button--projects" href="#">Live site</a></div>
+          <div><button class="button--projects" href="#">GitHub</button></div>
+          <div><button class="button--projects" href="#">Live site</button></div>
         </div>
 
       </div>
@@ -286,7 +286,7 @@
           <p class="projects__text projects__text--secondary">Here you can check the code for my first personal website
             (the one you are viewing right now!). Built using HTML, Sass and JavaScript.</p>
           <div class="buttons-container flex">
-            <div><a class="button--projects" href="#">GitHub</a></div>
+            <div><button class="button--projects" href="#">GitHub</button></div>
           </div>
         </div>
       </div>
