changed project titles font

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script src="js/main.js" defer></script>
   <!--devicons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+  
 </head>
 
 <body>
@@ -181,7 +182,7 @@
     <!--block 1-->
     <div class="wrapper wrapper--projects">
       <h2 class="section__title">Some things I’ve built<span class="full-stop">.</span></h2>
-      <p class="section__text">Currently working on improving my skills and growing this portfolio.</p>
+      <p class="section__text">Currently working on growing my skills and this portfolio with them.</p>
       <div class="grid grid__block">
 
         <picture class="projects__picture">
