--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <script src="js/main.js" defer></script>
   <!--devicons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-  
+  <!--scroll effects-->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -29,23 +30,28 @@
             class="sr-only">menu</span></button>
         <nav>
           <ul id="primary-nav" data-visible="false" class="primary-nav flex">
-            <li class="active">
+            <li class="active" data-aos="fade-down" data-aos-delay="500" data-aos-duration="600"
+              data-aos-easing="ease-in-out">
               <a class="primary-nav__link" href="#about">About</a>
             </li>
-            <li class="active">
+            <li class="active" data-aos="fade-down" data-aos-delay="600" data-aos-duration="600"
+              data-aos-easing="ease-in-out">
               <a class="primary-nav__link" href="#skills">Skills & Tools</a>
             </li>
-            <li class="active">
+            <li class="active" data-aos="fade-down" data-aos-delay="700" data-aos-duration="600"
+              data-aos-easing="ease-in-out">
               <a class="primary-nav__link" href="#work">Work</a>
             </li>
-            <li class="active">
+            <li class="active" data-aos="fade-down" data-aos-delay="800" data-aos-duration="600"
+              data-aos-easing="ease-in-out">
               <a class="primary-nav__link" href="#contact">Contact</a>
             </li>
           </ul>
         </nav>
       </div>
 
-      <div class="centered">
+      <div class="centered" data-aos="fade-up" data-aos-offset="200" data-aos-duration="1000"
+        data-aos-easing="ease-in-out">
         <h1 class="header__title">Hi, my <br> name is <span class="header__name">Gloria</span><span
             class="full-stop">.</span></h1>
         <p class="header__paragraph">I&rsquo;m a creative self-taught <b>developer</b><span class="full-stop">.</span>
@@ -54,7 +60,8 @@
     </div>
   </div>
 
-  <section class="section about" id="about">
+  <section class="section about" id="about" data-aos="fade-right" data-aos-offset="200" data-aos-delay="50"
+    data-aos-duration="1000" data-aos-easing="ease-in-out">
     <div class="wrapper">
       <h2 class="section__title">About me<span class="full-stop">.</span></h2>
       <p class="section__text">Hello, I'm a curiosity-driven front-end developer with a background in art.
@@ -89,7 +96,8 @@
   </section>
   <section class="section skills" id="skills">
 
-    <div class="wrapper">
+    <div class="wrapper" data-aos="fade-in" data-aos-offset="200" data-aos-delay="1" data-aos-duration="1000"
+      data-aos-easing="ease-in-out">
       <h2 class="section__title">Skills & Tools<span class="full-stop">.</span></h2>
       <p class="section__text">My skills and technologies I've been working with.</p>
       <div class="container__boxes grid">
@@ -180,7 +188,8 @@
 
   <section class="section projects" id="work">
     <!--block 1-->
-    <div class="wrapper wrapper--projects">
+    <div class="wrapper wrapper--projects" data-aos="fade-up" data-aos-offset="200" data-aos-duration="900"
+      data-aos-easing="ease-in-out">
       <h2 class="section__title">Some things I’ve built<span class="full-stop">.</span></h2>
       <p class="section__text">Currently working on growing my skills and this portfolio with them.</p>
       <div class="grid grid__block">
@@ -206,7 +215,8 @@
 
         <div class="buttons-container flex">
           <div><button class="button--projects" href="#">GitHub</button></div>
-          <div><button class="button--projects" href="https://trivia-quiz-game-7f6ef.web.app" target="_blank">Live site</button>
+          <div><button class="button--projects" href="https://trivia-quiz-game-7f6ef.web.app" target="_blank">Live
+              site</button>
           </div>
         </div>
 
@@ -214,7 +224,8 @@
     </div>
 
     <!--block 2-->
-    <div class="wrapper wrapper--projects">
+    <div class="wrapper wrapper--projects" data-aos="fade-up" data-aos-offset="200" data-aos-delay="60"
+      data-aos-duration="900" data-aos-easing="ease-in-out">
       <div class="grid grid__block grid__block--modified">
 
         <picture class="projects__picture">
@@ -239,7 +250,8 @@
 
         <div class="buttons-container buttons-container--modified flex">
           <div><button class="button--projects" href="#">GitHub</button></div>
-          <div><button class="button--projects" href="https://hiragana-flashcard-app.web.app" target="_blank">Live site</button>
+          <div><button class="button--projects" href="https://hiragana-flashcard-app.web.app" target="_blank">Live
+              site</button>
           </div>
         </div>
 
@@ -247,7 +259,8 @@
     </div>
 
     <!--block 3-->
-    <div class="wrapper wrapper--projects">
+    <div class="wrapper wrapper--projects" data-aos="fade-up" data-aos-offset="200" data-aos-delay="60"
+      data-aos-duration="900" data-aos-easing="ease-in-out">
       <div class="grid grid__block">
 
         <picture class="projects__picture">
@@ -279,7 +292,8 @@
 
 
 
-    <div class="wrapper wrapper--projects">
+    <div class="wrapper wrapper--projects" data-aos="fade-right" data-aos-offset="200" data-aos-delay="60"
+      data-aos-duration="700" data-aos-easing="ease-in-out">
       <h2 class="section__title">Other Projects<span class="full-stop">.</span></h2>
       <div class="project-box">
         <h1 class="projects__title">Personal website</h1>
@@ -297,12 +311,16 @@
 
   <section class="section contact" id="contact">
     <div class="wrapper wrapper--contact">
-      <h2 class="section__title">Get in Touch<span class="full-stop">.</span></h2>
-      <p class="section__text">If you have any questions, would like to build something together or just want to say hi,
-        my inbox is open. Thanks for stopping by! </p>
+      <div data-aos="fade-in" data-aos-delay="60" data-aos-duration="1000" data-aos-easing="ease-in-out">
+        <h2 class="section__title">Get in Touch<span class="full-stop">.</span></h2>
+        <p class="section__text">If you have any questions, would like to build something together or just want to say
+          hi,
+          my inbox is open. Thanks for stopping by! </p>
+      </div>
 
       <div class="flex flex--contact">
-        <div class="contact__container">
+        <div class="contact__container" data-aos="flip-down" data-aos-delay="80" data-aos-duration="900"
+          data-aos-easing="ease-in-out">
           <form class="contact__form" action="https://formsubmit.co/glorialmphoto@gmail.com" method="POST">
             <input type="hidden" name="_subject" value="New email!">
             <input type="text" name="name" placeholder="Name" required>
@@ -316,21 +334,25 @@
         </div>
       </div>
     </div>
-    
+
   </section>
 
   <footer class="footer">
     <div class="socials">
       <p class="footer__text">Find me elsewhere on the web:</p>
       <a class="socials__link" href="https://github.com/GlodallaLuna"><i class="devicon-github-original"></i></a>
-      <a class="socials__link" href="https://twitter.com/GlodallaLuna?t=89U-6GyNaA88pEt9zawbsA&s=35"><i class="devicon-twitter-original"></i></a>
+      <a class="socials__link" href="https://twitter.com/GlodallaLuna?t=89U-6GyNaA88pEt9zawbsA&s=35"><i
+          class="devicon-twitter-original"></i></a>
       <a class="socials__link" href=""><i class="devicon-linkedin-plain"></i></a>
     </div>
 
     <p class="footer__text">&copy; 2022 Designed & Built by Gloria Mancini</p>
   </footer>
 
-  
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 </html>
