--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         data-aos-easing="ease-in-out">
         <h1 class="header__title">Hi, my <br> name is <span class="header__name">Gloria</span><span
             class="full-stop">.</span></h1>
-        <p class="header__paragraph">I&rsquo;m a creative self-taught <b>developer</b><span class="full-stop">.</span>
+        <p class="header__paragraph">I&rsquo;m a creative self-taught Italian <b>developer</b><span class="full-stop">.</span>
         </p>
       </div>
     </div>
@@ -192,7 +192,7 @@
     <div class="wrapper wrapper--projects" data-aos="fade-up" data-aos-duration="800"
       data-aos-easing="ease-in-out" data-aos-once="true">
       <h2 class="section__title">Some things I’ve built<span class="full-stop">.</span></h2>
-      <p class="section__text">Currently working on growing my skills and this portfolio with them.</p>
+      <p class="section__text">As I grow as a developer, so too will this portfolio. Watch this space!</p>
       <div class="grid grid__block">
 
         <picture class="projects__picture">
