fixed external links issues

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       </div>
       <div class="section__text">I'm excited to keep learning and refining my skills with the right company.
         Feel free to reach out and say hello!</div>
-      <div class="button-container"><button class="button button--about" href="#contact">Get in touch</button></div>
+      <div class="button-container"><a href="#contact"><button class="button button--about" >Get in touch</button></a></div>
     </div>
     <div class="custom-shape-divider-bottom-1655993251">
       <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
@@ -215,10 +215,10 @@
         </div>
 
         <div class="buttons-container flex">
-          <div><button class="button--projects" href="#">GitHub</button></div>
-          <div><button class="button--projects" href="https://trivia-quiz-game-7f6ef.web.app" target="_blank">Live
+          <a href="https://github.com/GlodallaLuna/quiz-game" target="_blank"><button class="button--projects" >GitHub</button></a>
+          <a href="https://trivia-quiz-game-7f6ef.web.app" target="_blank"><button class="button--projects" >Live
               site</button>
-          </div>
+          </a>
         </div>
 
       </div>
@@ -250,10 +250,10 @@
         </div>
 
         <div class="buttons-container buttons-container--modified flex">
-          <div><button class="button--projects" href="#">GitHub</button></div>
-          <div><button class="button--projects" href="https://hiragana-flashcard-app.web.app" target="_blank">Live
+          <a href="https://github.com/GlodallaLuna/flashcard-app" target="_blank"><button class="button--projects" >GitHub</button></a>
+          <a href="https://hiragana-flashcard-app.web.app" target="_blank"><button class="button--projects">Live
               site</button>
-          </div>
+          </a>
         </div>
 
       </div>
@@ -284,8 +284,8 @@
         </div>
 
         <div class="buttons-container flex">
-          <div><button class="button--projects" href="#">GitHub</button></div>
-          <div><button class="button--projects" href="#">Live site</button></div>
+          <a href="#"><button class="button--projects" target="_blank">GitHub</button></a>
+          <a href="#"><button class="button--projects" target="_blank">Live site</button></a>
         </div>
 
       </div>
@@ -302,7 +302,7 @@
           <p class="projects__text projects__text--secondary">Here you can check the code for my first personal website
             (the one you are viewing right now!). Built using HTML, Sass and JavaScript.</p>
           <div class="buttons-container flex">
-            <div><button class="button--projects" href="#">GitHub</button></div>
+            <a  href="https://github.com/GlodallaLuna/personal-website"><button class="button--projects">GitHub</button></a>
           </div>
         </div>
       </div>
@@ -315,8 +315,7 @@
       <div data-aos="fade-in" data-aos-delay="60" data-aos-duration="1000" data-aos-easing="ease-in-out">
         <h2 class="section__title">Get in Touch<span class="full-stop">.</span></h2>
         <p class="section__text">If you have any questions, would like to build something together or just want to say
-          hi,
-          my inbox is open. Thanks for stopping by! </p>
+          hi, my inbox is open. Thanks for stopping by! </p>
       </div>
 
       <div class="flex flex--contact">
