fixed the external links issues

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </ul>
       </div>
       <div class="section__text">I'm excited to keep learning and refining my skills with the right company.
-        Feel free to reach out and say hello!</div>
+        Feel free to reach out and say hello.</div>
       <div class="button-container"><a href="#contact"><button class="button button--about" >Get in touch</button></a></div>
     </div>
     <div class="custom-shape-divider-bottom-1655993251">
@@ -192,7 +192,7 @@
     <div class="wrapper wrapper--projects" data-aos="fade-up" data-aos-duration="800"
       data-aos-easing="ease-in-out" data-aos-once="true">
       <h2 class="section__title">Some things I’ve built<span class="full-stop">.</span></h2>
-      <p class="section__text">As I grow as a developer, so too will this portfolio. Watch this space!</p>
+      <p class="section__text">As I grow as a developer, so too will this portfolio.</p>
       <div class="grid grid__block">
 
         <picture class="projects__picture">
@@ -300,9 +300,9 @@
         <h1 class="projects__title">Personal website</h1>
         <div class="flex projects__secondary">
           <p class="projects__text projects__text--secondary">Here you can check the code for my first personal website
-            (the one you are viewing right now!). Built using HTML, Sass and JavaScript.</p>
+            (the one you are viewing right now). Built using HTML, Sass and JavaScript.</p>
           <div class="buttons-container flex">
-            <a  href="https://github.com/GlodallaLuna/personal-website"><button class="button--projects">GitHub</button></a>
+            <a href="https://github.com/GlodallaLuna/personal-website" target="_blank"><button class="button--projects">GitHub</button></a>
           </div>
         </div>
       </div>
@@ -315,7 +315,7 @@
       <div data-aos="fade-in" data-aos-delay="60" data-aos-duration="1000" data-aos-easing="ease-in-out">
         <h2 class="section__title">Get in Touch<span class="full-stop">.</span></h2>
         <p class="section__text">If you have any questions, would like to build something together or just want to say
-          hi, my inbox is open. Thanks for stopping by! </p>
+          hi, my inbox is open. Thanks for stopping by. </p>
       </div>
 
       <div class="flex flex--contact">
