added browser icon

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   <!--scroll effects-->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!--browser icon-->
+  <link rel="shortcut icon" type="image/svg" href="images/bitmap-fav.svg">
 </head>
 
 <body>
@@ -312,7 +314,7 @@
 
   <section class="section contact" id="contact">
     <div class="wrapper wrapper--contact">
-      <div data-aos="fade-in" data-aos-delay="60" data-aos-duration="1000" data-aos-easing="ease-in-out">
+      <div data-aos="fade-in" data-aos-delay="60" data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-once="true">
         <h2 class="section__title">Get in Touch<span class="full-stop">.</span></h2>
         <p class="section__text">If you have any questions, would like to build something together or just want to say
           hi, my inbox is open. Thanks for stopping by. </p>
