updated html file

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </section>
   <section class="section skills" id="skills">
 
-    <div class="wrapper" data-aos="fade-in" data-aos-offset="200" data-aos-delay="1" data-aos-duration="1000"
+    <div class="wrapper" data-aos="fade-in" data-aos-duration="900"
       data-aos-easing="ease-in-out" data-aos-once="true">
       <h2 class="section__title">Skills & Tools<span class="full-stop">.</span></h2>
       <p class="section__text">My skills and technologies I've been working with.</p>
@@ -323,7 +323,7 @@
       <div class="flex flex--contact">
         <div class="contact__container" data-aos="flip-down" data-aos-delay="80" data-aos-duration="900"
           data-aos-easing="ease-in-out" data-aos-once="true">
-          <form class="contact__form" action="https://formsubmit.co/glorialmphoto@gmail.com" method="POST">
+          <form class="contact__form" action="https://formsubmit.co/gloriamancini00@gmail.com" method="POST">
             <input type="hidden" name="_subject" value="New email!">
             <input type="text" name="name" placeholder="Name" required>
             <input type="email" name="email" placeholder="Email address" required>
