uploaded accessibility features

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="js/main.js" defer></script>
   <!--devicons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-  <!--scroll effects-->
+  <!--aos js library for animation on scroll-->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!--browser icon-->
   <link rel="shortcut icon" type="image/svg" href="images/bitmap-fav.svg">
@@ -26,7 +26,7 @@
   <div class="header ">
     <div class="header-primary ">
       <a href="index.html" class="logo" data-aos="fade-out" data-aos-offset="200" data-aos-delay="200"
-      data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-once="true"><img class="logo-img" src="images/bitmap2.svg" alt="svg logo"></a>
+      data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-once="true"><img class="logo-img" src="images/bitmap2.svg" alt="personal logo"></a>
       <div class="nav-wrapper flex">
 
         <button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false"><span
@@ -83,6 +83,7 @@
         Feel free to reach out and say hello.</div>
       <div class="button-container"><a href="#contact"><button class="button button--about" >Get in touch</button></a></div>
     </div>
+    <!--costum shape divider-->
     <div class="custom-shape-divider-bottom-1655993251">
       <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
         <path
@@ -146,7 +147,7 @@
 
         <div class="box">
           <!--icon from https://www.svgrepo.com-->
-          <img class="box__img" src="/images/terminal-svgrepo-com.svg" alt="icon of tablet and phone devices">
+          <img class="box__img" src="/images/terminal-svgrepo-com.svg" alt="icon of terminal">
           <p class="box__label">Terminal</p>
         </div>
 
@@ -198,7 +199,7 @@
       <div class="grid grid__block">
 
         <picture class="projects__picture">
-          <img class="projects__img" src="/images/quiz-img.png" alt="">
+          <img class="projects__img" src="/images/quiz-img.png" alt="Quiz-game screenshot showed on mobile and desktop devices">
         </picture>
 
         <div class="projects__text-wrapper">
@@ -232,7 +233,7 @@
       <div class="grid grid__block grid__block--modified">
 
         <picture class="projects__picture">
-          <img class="projects__img" src="/images/hiragana-ipan-phone.png" alt="">
+          <img class="projects__img" src="/images/hiragana-ipan-phone.png" alt="Flashcard app screenshot showed on mobile and desktop devices">
         </picture>
 
         <div class="projects-wrapper--modified">
@@ -267,7 +268,7 @@
       <div class="grid grid__block">
 
         <picture class="projects__picture">
-          <img class="projects__img" src="/images/animation-pro.png" alt="">
+          <img class="projects__img" src="/images/animation-pro.png" alt="GTech website screenshot showed on mobile and desktop devices">
         </picture>
 
         <div class="projects__text-wrapper">
@@ -302,7 +303,7 @@
         <h1 class="projects__title">Personal website</h1>
         <div class="flex projects__secondary">
           <p class="projects__text projects__text--secondary">Here you can check the code for my first personal website
-            (the one you are viewing right now). Built using HTML, Sass and JavaScript.</p>
+            (the one you are viewing right now). Built using <b>HTML</b>, <b>Sass</b> and <b>JavaScript</b>.</p>
           <div class="buttons-container flex">
             <a href="https://github.com/GlodallaLuna/personal-website" target="_blank"><button class="button--projects">GitHub</button></a>
           </div>
@@ -342,10 +343,10 @@
   <footer class="footer">
     <div class="socials">
       <p class="footer__text">Find me elsewhere on the web:</p>
-      <a class="socials__link" href="https://github.com/GlodallaLuna"><i class="devicon-github-original"></i></a>
-      <a class="socials__link" href="https://twitter.com/GlodallaLuna?t=89U-6GyNaA88pEt9zawbsA&s=35"><i
+      <a class="socials__link" href="https://github.com/GlodallaLuna" alt="GitHub icon"><i class="devicon-github-original"></i></a>
+      <a class="socials__link" href="https://twitter.com/GlodallaLuna?t=89U-6GyNaA88pEt9zawbsA&s=35" alt="twitter icon"><i
           class="devicon-twitter-original"></i></a>
-      <a class="socials__link" href=""><i class="devicon-linkedin-plain"></i></a>
+      <a class="socials__link" href="#" alt="LinkedIn icon"><i class="devicon-linkedin-plain"></i></a>
     </div>
 
     <p class="footer__text">&copy; 2022 Designed & Built by Gloria Mancini</p>
