--- a/index.html
+++ b/index.html
@@ -343,10 +343,10 @@
   <footer class="footer">
     <div class="socials">
       <p class="footer__text">Find me elsewhere on the web:</p>
-      <a class="socials__link" href="https://github.com/GlodallaLuna" alt="GitHub icon"><i class="devicon-github-original"></i></a>
-      <a class="socials__link" href="https://twitter.com/GlodallaLuna?t=89U-6GyNaA88pEt9zawbsA&s=35" alt="twitter icon"><i
+      <a class="socials__link" href="https://github.com/GlodallaLuna" alt="GitHub icon" target="_blank"><i class="devicon-github-original"></i></a>
+      <a class="socials__link" href="https://twitter.com/GlodallaLuna?t=89U-6GyNaA88pEt9zawbsA&s=35" alt="twitter icon" target="_blank"><i
           class="devicon-twitter-original"></i></a>
-      <a class="socials__link" href="#" alt="LinkedIn icon"><i class="devicon-linkedin-plain"></i></a>
+      <a class="socials__link" href="https://www.linkedin.com/in/gloria-mancini-b1471b246/" alt="LinkedIn icon" target="_blank"><i class="devicon-linkedin-plain"></i></a>
     </div>
 
     <p class="footer__text">&copy; 2022 Designed & Built by Gloria Mancini</p>
