fixed animation project link

--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
         </div>
 
         <div class="buttons-container flex">
-          <a href="https://github.com/GlodallaLuna/gtech"><button class="button--projects" target="_blank">GitHub</button></a>
-          <a href="animation-website-8fea8.web.app" target="_blank"><button class="button--projects">Live site</button></a>
+          <a href="https://github.com/GlodallaLuna/gtech" target="_blank"><button class="button--projects">GitHub</button></a>
+          <a href="https://animation-website-8fea8.web.app" target="_blank"><button class="button--projects">Live site</button></a>
         </div>
 
       </div>
