--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Gloria Mancini</title>
+  <title>Gloria Mancini - Front-end web developer</title>
   <!--Google fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -241,7 +241,7 @@
           <p class="projects__text projects__text--modified">
             I asked myself: what's the best way to practice React and study Japanese? By building a hiragana flashcard
             app!
-            A pair programming project with <a href="#" class="projects__name">Niall Byrnes</a>.
+            A pair programming project with <a href="https://niallbyrnes.com" class="projects__name">Niall Byrnes</a>.
           </p>
           <div class="projects__text projects__text--modified">
             <p>Made with:</p>
