--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
           <p class="projects__text projects__text--modified">
             I asked myself: what's the best way to practice React and study Japanese? By building a hiragana flashcard
             app!
-            A pair programming project with <a href="https://niallbyrnes.com" class="projects__name">Niall Byrnes</a>.
+            A pair programming project with <a href="https://niallbyrnes.com" class="projects__name" target="_blank">Niall Byrnes</a>.
           </p>
           <div class="projects__text projects__text--modified">
             <p>Made with:</p>
