update projects section

--- a/index.html
+++ b/index.html
@@ -288,27 +288,27 @@
       <div class="grid grid__block">
 
         <picture class="projects__picture">
-          <img class="projects__img" src="/images/animation-pro.png" alt="GTech website screenshot showed on mobile and desktop devices">
+          <img class="projects__img" src="/images/n-byrnes-personal-website-img.png" alt="GTech website screenshot showed on mobile and desktop devices">
         </picture>
 
         <div class="projects__text-wrapper">
-          <h1 class="projects__title">GTech website</h1>
+          <h1 class="projects__title">Physics researcher website</h1>
           <p class="projects__text">
-            Multi-page website made using GSAP animation library. Responsive across devices.
+            Multi-page personal website for a physics researcher. Responsive across devices.
           </p>
           <div class="projects__text">
             <p>Made with:</p>
             <ul class="projects__list flex">
               <li>HTML</li>
               <li>CSS</li>
-              <li>GSAP</li>
+              <li>JavaScript</li>
             </ul>
           </div>
         </div>
 
         <div class="buttons-container flex">
-          <a href="https://github.com/GlodallaLuna/gtech" target="_blank"><button class="button--projects">GitHub</button></a>
-          <a href="https://animation-website-8fea8.web.app" target="_blank"><button class="button--projects">Live site</button></a>
+          <a href="https://github.com/niall081/niall081.github.io" target="_blank"><button class="button--projects">GitHub</button></a>
+          <a href="https://niallbyrnes.com" target="_blank"><button class="button--projects">Live site</button></a>
         </div>
 
       </div>
@@ -316,7 +316,7 @@
 
 
 
-    <div class="wrapper wrapper--projects" data-aos="fade-right" data-aos-delay="50"
+    <div class="wrapper wrapper--projects wrapper--projects-row" data-aos="fade-right" data-aos-delay="50"
       data-aos-duration="700" data-aos-easing="ease-in-out" data-aos-once="true">
       <h2 class="section__title">Other Projects<span class="full-stop">.</span></h2>
       <div class="project-box">
@@ -326,6 +326,20 @@
             (the one you are viewing right now). Built using <b>HTML</b>, <b>Sass</b> and <b>JavaScript</b>.</p>
           <div class="buttons-container flex">
             <a href="https://github.com/GlodallaLuna/personal-website" target="_blank"><button class="button--projects">GitHub</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper wrapper--projects wrapper--projects-row" data-aos="fade-right"
+      data-aos-duration="700" data-aos-easing="ease-in-out" data-aos-once="true">
+      <div class="project-box">
+        <h1 class="projects__title">Gtech website</h1>
+        <div class="flex projects__secondary">
+          <p class="projects__text projects__text--secondary">Responsive multipage website I built while I was learning GSAP animations. <br> Technologies used: <b>HTML</b>, <b>Sass</b> and <b>GSAP</b>.</p>
+          <div class="buttons-container flex">
+            <a href="https://github.com/GlodallaLuna/gtech" target="_blank"><button class="button--projects">GitHub</button></a>
+            <a href="https://animation-website-8fea8.web.app" target="_blank"><button class="button--projects">Live site</button></a>
           </div>
         </div>
       </div>
