update about section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-once="true">
     <div class="wrapper">
       <h2 class="section__title">About me<span class="full-stop">.</span></h2>
-      <p class="section__text">Hello, I'm a curiosity-driven front-end developer with a background in art.
+      <p class="section__text">Hello, I'm a curiosity-driven <strong>front-end developer</strong> with a background in art.
         The Internet is where I learnt a lot of useful skills and now I want to contribute by building things for the
         web.
         I love combining my passion for design with my technical knowledge to
