--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
       <div class="project-box">
         <h1 class="projects__title">Gtech website</h1>
         <div class="flex projects__secondary">
-          <p class="projects__text projects__text--secondary">Responsive multipage website I built while I was learning GSAP animations. <br> Technologies used: <b>HTML</b>, <b>Sass</b> and <b>GSAP</b>.</p>
+          <p class="projects__text projects__text--secondary">Responsive multipage website I built while I was learning GSAP animations. <br> Technologies used: <b>HTML</b>, <b>Sass</b>, vanilla <b>JavaScript</b> and <b>GSAP</b>.</p>
           <div class="buttons-container flex">
             <a href="https://github.com/GlodallaLuna/gtech" target="_blank"><button class="button--projects">GitHub</button></a>
             <a href="https://animation-website-8fea8.web.app" target="_blank"><button class="button--projects">Live site</button></a>
