--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
           <ul id="primary-nav" data-visible="false" class="primary-nav flex">
             <li class="active" data-aos="fade-down" data-aos-delay="500" data-aos-duration="600"
               data-aos-easing="ease-in-out" data-aos-once="true">
-              <a class="primary-nav__link" href="#about">About</a>
+              <a class="primary-nav__link a" href="#about">About</a>
             </li>
             <li class="active" data-aos="fade-down" data-aos-delay="600" data-aos-duration="600"
               data-aos-easing="ease-in-out" data-aos-once="true">
-              <a class="primary-nav__link" href="#skills">Skills & Tools</a>
+              <a class="primary-nav__link a" href="#skills">Skills & Tools</a>
             </li>
             <li class="active" data-aos="fade-down" data-aos-delay="700" data-aos-duration="600"
               data-aos-easing="ease-in-out" data-aos-once="true">
-              <a class="primary-nav__link" href="#work">Work</a>
+              <a class="primary-nav__link a" href="#work">Work</a>
             </li>
             <li class="active" data-aos="fade-down" data-aos-delay="800" data-aos-duration="600"
               data-aos-easing="ease-in-out" data-aos-once="true">
-              <a class="primary-nav__link" href="#contact">Contact</a>
+              <a class="primary-nav__link a" href="#contact">Contact</a>
             </li>
           </ul>
         </nav>
@@ -238,8 +238,8 @@
         </div>
 
         <div class="buttons-container flex">
-          <a href="https://github.com/GlodallaLuna/quiz-game" target="_blank"><button class="button--projects" >GitHub</button></a>
-          <a href="https://trivia-quiz-game-7f6ef.web.app" target="_blank"><button class="button--projects" >Live
+          <a class="a" href="https://github.com/GlodallaLuna/quiz-game" target="_blank"><button class="button--projects" >GitHub</button></a>
+          <a class="a" href="https://trivia-quiz-game-7f6ef.web.app" target="_blank"><button class="button--projects" >Live
               site</button>
           </a>
         </div>
@@ -248,6 +248,74 @@
     </div>
 
     <!--block 2-->
+    <div class="wrapper wrapper--projects" data-aos="fade-up"  data-aos-delay="50"
+      data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-once="true">
+      <div class="grid grid__block grid__block--modified">
+
+        <picture class="projects__picture">
+          <img class="projects__img" src="/images/countries-app-proj-img.png" alt="Flashcard app screenshot showed on mobile and desktop devices">
+        </picture>
+
+        <div class="projects-wrapper--modified">
+          <h1 class="projects__title projects__title--modified">GeoCountires</h1>
+          <p class="projects__text projects__text--modified">
+            Powered by Rest Countries and Google Maps Platform, it helps you learn more about all the countries around the world.<br>
+            Created with <a href="https://niallbyrnes.com" class="projects__name" target="_blank">Niall Byrnes.</a><br>
+            Check the design on <a href="https://www.figma.com/file/MQ6EsjezLDQOgFszBJNzDx/Countries-App?node-id=0%3A1" class="projects__name" target="_blank">Figma</a>.
+          </p>
+          <div class="projects__text projects__text--modified">
+            <p>Made with:</p>
+            <ul class="projects__list flex">
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>JavaScript</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="buttons-container buttons-container--modified flex">
+          <a class="a" href="https://github.com/GlodallaLuna/geo-countries" target="_blank"><button class="button--projects" >GitHub</button></a>
+          <a class="a" href="https://countries-app-a529e.firebaseapp.com/" target="_blank"><button class="button--projects">Live
+              site</button>
+          </a>
+        </div>
+
+      </div>
+    </div>
+
+    <!--block 3-->
+    <div class="wrapper wrapper--projects" data-aos="fade-up"  data-aos-delay="50"
+      data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-once="true">
+      <div class="grid grid__block">
+
+        <picture class="projects__picture">
+          <img class="projects__img" src="/images/n-byrnes-personal-website-img.png" alt="GTech website screenshot showed on mobile and desktop devices">
+        </picture>
+
+        <div class="projects__text-wrapper">
+          <h1 class="projects__title">Physics Researcher Website</h1>
+          <p class="projects__text">
+            Multi-page personal website for a physics researcher. Responsive across devices.
+          </p>
+          <div class="projects__text">
+            <p>Made with:</p>
+            <ul class="projects__list flex">
+              <li>HTML</li>
+              <li>SASS</li>
+              <li>JavaScript</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="buttons-container flex">
+          <a class="a" href="https://github.com/niall081/niall081.github.io" target="_blank"><button class="button--projects">GitHub</button></a>
+          <a class="a" href="https://niallbyrnes.com" target="_blank"><button class="button--projects">Live site</button></a>
+        </div>
+
+      </div>
+    </div>
+
+    <!--block 4-->
     <div class="wrapper wrapper--projects" data-aos="fade-up"  data-aos-delay="50"
       data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-once="true">
       <div class="grid grid__block grid__block--modified">
@@ -273,8 +341,8 @@
         </div>
 
         <div class="buttons-container buttons-container--modified flex">
-          <a href="https://github.com/GlodallaLuna/flashcard-app" target="_blank"><button class="button--projects" >GitHub</button></a>
-          <a href="https://hiragana-flashcard-app.web.app" target="_blank"><button class="button--projects">Live
+          <a class="a" href="https://github.com/GlodallaLuna/flashcard-app" target="_blank"><button class="button--projects" >GitHub</button></a>
+          <a class="a" href="https://hiragana-flashcard-app.web.app" target="_blank"><button class="button--projects">Live
               site</button>
           </a>
         </div>
@@ -282,37 +350,7 @@
       </div>
     </div>
 
-    <!--block 3-->
-    <div class="wrapper wrapper--projects" data-aos="fade-up"  data-aos-delay="50"
-      data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-once="true">
-      <div class="grid grid__block">
-
-        <picture class="projects__picture">
-          <img class="projects__img" src="/images/n-byrnes-personal-website-img.png" alt="GTech website screenshot showed on mobile and desktop devices">
-        </picture>
-
-        <div class="projects__text-wrapper">
-          <h1 class="projects__title">Physics researcher website</h1>
-          <p class="projects__text">
-            Multi-page personal website for a physics researcher. Responsive across devices.
-          </p>
-          <div class="projects__text">
-            <p>Made with:</p>
-            <ul class="projects__list flex">
-              <li>HTML</li>
-              <li>SASS</li>
-              <li>JavaScript</li>
-            </ul>
-          </div>
-        </div>
-
-        <div class="buttons-container flex">
-          <a href="https://github.com/niall081/niall081.github.io" target="_blank"><button class="button--projects">GitHub</button></a>
-          <a href="https://niallbyrnes.com" target="_blank"><button class="button--projects">Live site</button></a>
-        </div>
-
-      </div>
-    </div>
+    
 
 
 
@@ -325,7 +363,7 @@
           <p class="projects__text projects__text--secondary">Here you can check the code for my first personal website
             (the one you are viewing right now). Built using <b>HTML</b>, <b>Sass</b> and <b>JavaScript</b>.</p>
           <div class="buttons-container flex">
-            <a href="https://github.com/GlodallaLuna/personal-website" target="_blank"><button class="button--projects">GitHub</button></a>
+            <a class="a" href="https://github.com/GlodallaLuna/personal-website" target="_blank"><button class="button--projects">GitHub</button></a>
           </div>
         </div>
       </div>
@@ -339,8 +377,8 @@
           <p class="projects__text projects__text--secondary">Responsive multipage website I built while I was learning GSAP animations. 
             <br> Technologies used: <b>HTML</b>, <b>CSS</b>, vanilla <b>JavaScript</b> and <b>GSAP</b>.</p>
           <div class="buttons-container flex">
-            <a href="https://github.com/GlodallaLuna/gtech" target="_blank"><button class="button--projects">GitHub</button></a>
-            <a href="https://animation-website-8fea8.web.app" target="_blank"><button class="button--projects">Live site</button></a>
+            <a class="a" href="https://github.com/GlodallaLuna/gtech" target="_blank"><button class="button--projects">GitHub</button></a>
+            <a class="a" href="https://animation-website-8fea8.web.app" target="_blank"><button class="button--projects">Live site</button></a>
           </div>
         </div>
       </div>
