--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </picture>
 
         <div class="projects-wrapper--modified">
-          <h1 class="projects__title projects__title--modified">GeoCountires</h1>
+          <h1 class="projects__title projects__title--modified">GeoCountries</h1>
           <p class="projects__text projects__text--modified">
             Powered by Rest Countries and Google Maps Platform, it helps you learn more about all the countries around the world.<br>
             Created with <a href="https://niallbyrnes.com" class="projects__name" target="_blank">Niall Byrnes.</a><br>
