--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <p>Made with:</p>
             <ul class="projects__list flex">
               <li>HTML</li>
-              <li>CSS</li>
+              <li>Sass</li>
               <li>JavaScript</li>
             </ul>
           </div>
@@ -301,7 +301,7 @@
             <p>Made with:</p>
             <ul class="projects__list flex">
               <li>HTML</li>
-              <li>SASS</li>
+              <li>Sass</li>
               <li>JavaScript</li>
             </ul>
           </div>
