--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="header ">
     <div class="header-primary ">
       <a href="index.html" class="logo" data-aos="fade-out" data-aos-offset="200" data-aos-delay="200"
-      data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-once="true"><img class="logo-img" src="images/bitmap2.svg" alt="personal logo"></a>
+      data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-once="true"><img class="logo-img" src="images/logo.svg" alt="personal logo"></a>
       <div class="nav-wrapper flex">
 
         <button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false"><span
