--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!--aos js library for animation on scroll-->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <!--browser icon-->
-  <link rel="shortcut icon" type="image/svg" href="images/bitmap-fav.svg">
+  <link rel="shortcut icon" type="image/svg" href="images/logo-fav.svg">
 </head>
 
 <body>
