update scroll paragraph section

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@
           data-aos-easing="ease-in-out">l</span>
           <span class="span--scroll" data-aos="zoom-in-up" data-aos-delay="1050" data-aos-duration="600"
           data-aos-easing="ease-in-out">l</span>
-          <img class="scroll-icon" src="./images/double-arrow-down-svgrepo-com.svg" alt=""
+          <img class="scroll-icon" src="./images/double-arrow-down-svgrepo-com.svg" alt="scroll arrows"
           data-aos="zoom-in-up" data-aos-delay="1100" data-aos-duration="600"
           data-aos-easing="ease-in-out">
         </p>
       </div>
     </div>
   </div>
+  
 
   <section class="section about" id="about" data-aos="fade-out" data-aos-offset="200" data-aos-delay="200"
     data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-once="true">
