create articles folder and blog.html

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </li>
             <li class="active" data-aos="fade-down" data-aos-delay="800" data-aos-duration="600"
               data-aos-easing="ease-in-out" data-aos-once="true">
-              <a class="primary-nav__link a external" href="#"><small>Blog</small></a>
+              <a class="primary-nav__link a external" href="blog.html" target="_blank"><small>Blog</small></a>
             </li>
           </ul>
         </nav>
