--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Articles</title>
+    <title>Blog | Gloria Mancini</title>
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,15 +33,37 @@
             <aside class="flex">
                 <img class="avatar" src="images/avatar.png" alt="Gloria's avatar">
                 <div class="aside__text">
-                    <p>Blog by <a class="blog__link" href="index.html">Gloria Mancini</a>.</p>
+                    <p>A blog by <a class="blog__link" href="index.html">Gloria Mancini</a>.</p>
                     <p>Sharing my journey in tech.</p>
                 </div>
             </aside>
         </div>
 
-        <div class="blog__wrapper">
-            
-        </div>
+        <main class="blog__wrapper">
+            <article class="article-snippet">
+                <h1 class="section__title article__title">Why and how to start using Devtools if you are learning CSS</h1>
+                <p class="text-small">Sep 22, 2022</p>
+                <div class="text section__text">
+                    <p class="text__paragraph">If I could give a piece of advice to my former self back when I started
+                        learning web development,
+                        it would be to <strong>start using Devtools from day one</strong>. </p>
+                    <p class="text__paragraph">
+                        In my personal experience, while the first CSS courses I followed online taught me a lot about CSS
+                        theory and encouraged me
+                        to learn through practice, <strong>they didn’t put enough emphasis on the importance of developer
+                            tools.</strong>
+                        In JavaScript, on the other hand,
+                        every lesson starts by showing you the console, as it’s crucial to understanding how the language
+                        works. </p>
+                    <p class="text__paragraph">
+                        I believe that a good understanding of what happens <strong>behind the scenes</strong> on a webpage
+                        is not only useful for<strong> debugging</strong>,
+                        but is also a fundamental step in your journey <strong>to really understand CSS</strong>.</p>
+
+                    <div class="button-container--article"><a href="articles/why-and-how-to-start-using-devtools.html"><button class="button button--article" >Read More</button></a></div>
+                    </div>    
+            </article>
+        </main>
 
 
         <footer class="footer--sticky">
