update blog header

--- a/blog.html
+++ b/blog.html
@@ -26,12 +26,12 @@
 
         <div class="blog__wrapper">
             <div class="blog__wrapper--title flex">
-                <h1 class="section__title blog__title">My Articles</h1>
+                <h1 class="section__title blog__title">My Articles<span class="full-stop">.</span></h1>
                 <a class="blog__link--header" href="index.html">Home</a>
             </div>
 
             <aside class="flex">
-                <img class="avatar" src="images/avatar.png" alt="Gloria's avatar">
+                <!-- <img class="avatar" src="images/avatar.png" alt="Gloria's avatar"> -->
                 <div class="aside__text">
                     <p>A blog by <a class="blog__link" href="index.html">Gloria Mancini</a>.</p>
                     <p>Sharing my journey in tech.</p>
