--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <body>
   <div class="header ">
     <div class="header-primary ">
-      <a href="index.html" class="logo" data-aos="fade-out" data-aos-offset="200" data-aos-delay="200"
+      <a href="/" class="logo" data-aos="fade-out" data-aos-offset="200" data-aos-delay="200"
       data-aos-duration="1000" data-aos-easing="ease-in-out" data-aos-once="true"><img class="logo-img" src="images/logo.svg" alt="personal logo"></a>
       <div class="nav-wrapper flex">
 
@@ -53,7 +53,7 @@
             </li>
             <li class="active" data-aos="fade-down" data-aos-delay="800" data-aos-duration="600"
               data-aos-easing="ease-in-out" data-aos-once="true">
-              <a class="primary-nav__link a external" href="blog.html"><small>Blog</small></a>
+              <a class="primary-nav__link a external" href="/blog"><small>Blog</small></a>
             </li>
           </ul>
         </nav>
