update svg path on 404.html

--- a/404.html
+++ b/404.html
@@ -22,7 +22,7 @@
 </head>
 <body class="error-body">
     <div class="error grid">
-        <div class="error__img"><img src="images/404 Error with a cute animal-pana 1.svg" alt="purple unicorn illustration"></div>
+        <div class="error__img"><img src="../images/404 Error with a cute animal-pana 1.svg" alt="purple unicorn illustration"></div>
         <div class="error-container flex">
             <p class="section__title error__paragraph">Oops! </p> 
             <!-- <span class="error__span">Error 404</span> -->
