update svg path on 404.html

--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">  
   <link href="https://fonts.googleapis.com/css2?family=Asap+Condensed&display=swap" rel="stylesheet"> 
   <!--CSS and JS-->
-  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <script src="js/main.js" defer></script>
   <!--devicons-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
@@ -22,7 +22,7 @@
 </head>
 <body class="error-body">
     <div class="error grid">
-        <div class="error__img"><img src="../images/404 Error with a cute animal-pana 1.svg" alt="purple unicorn illustration"></div>
+        <div class="error__img"><img src="/images/404 Error with a cute animal-pana 1.svg" alt="purple unicorn illustration"></div>
         <div class="error-container flex">
             <p class="section__title error__paragraph">Oops! </p> 
             <!-- <span class="error__span">Error 404</span> -->
