add link to storyset on 404.html

--- a/404.html
+++ b/404.html
@@ -32,7 +32,7 @@
     </div>
 
     <footer class="footer--sticky">
-        <div class="footer__text"><a class="blog__link" href="https://storyset.com/web">Web Illustration by Storyset</a></div>
+        <div class="footer__text"><a class="blog__link" href="https://storyset.com/web" target="_blank">Web Illustration by Storyset</a></div>
     </footer>
 
     
