add birthday random facts project

--- a/index.html
+++ b/index.html
@@ -226,27 +226,29 @@
       <div class="grid grid__block">
 
         <picture class="projects__picture">
-          <img class="projects__img" src="/images/quiz-img.png" alt="Quiz-game screenshot showed on mobile and desktop devices">
+          <img class="projects__img" src="/images/birthday-random-fact.png" alt="Quiz-game screenshot showed on mobile and desktop devices">
         </picture>
 
         <div class="projects__text-wrapper">
-          <h1 class="projects__title">Trivia Quiz</h1>
+          <h1 class="projects__title">Birthday Random Facts</h1>
           <p class="projects__text">
-            How much do you know about the world? Let's find out. Test yourself with my quiz.
+            One page application I designed on <a href="https://www.figma.com/file/mwvWTndGGh6VgHSDy3DC9i/Untitled?node-id=0%3A1&t=FWmyh8mk4JInbJsO-0" class="projects__name" target="_blank">Figma</a>
+             and built to practice what I've learnt in the React <a href="https://scrimba.com/learn/learnreact" class="projects__name" target="_blank">Scrimba Course.</a> <br>
+            Powered by <a href="https://api-ninjas.com/api/historicalevents" class="projects__name" target="_blank">Historical Event API</a>
           </p>
           <div class="projects__text">
             <p>Made with:</p>
             <ul class="projects__list flex">
               <li>HTML</li>
               <li>CSS</li>
-              <li>JavaScript</li>
+              <li>React</li>
             </ul>
           </div>
         </div>
 
         <div class="buttons-container flex">
-          <a class="a" href="https://github.com/GlodallaLuna/quiz-game" target="_blank"><button class="button--projects" >GitHub</button></a>
-          <a class="a" href="https://trivia-quiz-game-7f6ef.web.app" target="_blank"><button class="button--projects" >Live
+          <a class="a" href="https://github.com/GlodallaLuna/birthday-random-facts" target="_blank"><button class="button--projects" >GitHub</button></a>
+          <a class="a" href="https://birthday-random-fact.web.app/" target="_blank"><button class="button--projects" >Live
               site</button>
           </a>
         </div>
@@ -328,6 +330,40 @@
       <div class="grid grid__block grid__block--modified">
 
         <picture class="projects__picture">
+          <img class="projects__img" src="/images/quiz-game-v2.png" alt="Trivi Quiz game screenshot showed on mobile and desktop devices">
+        </picture>
+
+        <div class="projects-wrapper--modified">
+          <h1 class="projects__title projects__title--modified">Trivia Quiz</h1>
+          <p class="projects__text projects__text--modified">
+            How much do you know about the world? <br> Let's find out. Test yourself with my quiz.
+          </p>
+          <div class="projects__text projects__text--modified">
+            <p>Made with:</p>
+            <ul class="projects__list flex">
+              <li>HTML</li>
+              <li>Sass</li>
+              <li>JavaScript</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="buttons-container buttons-container--modified flex">
+          <a class="a" href="https://github.com/GlodallaLuna/quiz-game" target="_blank"><button class="button--projects" >GitHub</button></a>
+          <a class="a" href="https://trivia-quiz-game-7f6ef.web.app" target="_blank"><button class="button--projects">Live
+              site</button>
+          </a>
+        </div>
+
+      </div>
+    </div>
+
+    <!--block test-->
+    <!-- <div class="wrapper wrapper--projects" data-aos="fade-up"  data-aos-delay="50"
+      data-aos-duration="800" data-aos-easing="ease-in-out" data-aos-once="true">
+      <div class="grid grid__block grid__block--modified">
+
+        <picture class="projects__picture">
           <img class="projects__img" src="/images/hiragana-ipan-phone.png" alt="Flashcard app screenshot showed on mobile and desktop devices">
         </picture>
 
@@ -355,7 +391,7 @@
         </div>
 
       </div>
-    </div>
+    </div> -->
 
     
 
@@ -371,6 +407,23 @@
             (the one you are viewing right now). Built using <b>HTML</b>, <b>Sass</b> and <b>JavaScript</b>.</p>
           <div class="buttons-container flex">
             <a class="a" href="https://github.com/GlodallaLuna/personal-website" target="_blank"><button class="button--projects">GitHub</button></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="wrapper wrapper--projects wrapper--projects-row" data-aos="fade-right"
+      data-aos-duration="700" data-aos-easing="ease-in-out" data-aos-once="true">
+      <div class="project-box">
+        <h1 class="projects__title">Hiragana Flashcards App</h1>
+        <div class="flex projects__secondary">
+          <p class="projects__text projects__text--secondary">I asked myself: what's the best way to practice React and study Japanese? By building a hiragana flashcard
+            app!
+            A pair programming project with <a href="https://niallbyrnes.com" class="projects__name" target="_blank">Niall Byrnes</a>.
+            <br> Technologies used: <b>React</b> and <b>CSS</b></p>
+          <div class="buttons-container flex">
+            <a class="a" href="https://github.com/GlodallaLuna/flashcard-app" target="_blank"><button class="button--projects">GitHub</button></a>
+            <a class="a" href="https://hiragana-flashcard-app.web.app" target="_blank"><button class="button--projects">Live site</button></a>
           </div>
         </div>
       </div>
